--- a/mod2/index.html
+++ b/mod2/index.html
@@ -1,11 +1,33 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html>
-    <head>
-        <title>Mod2</title>
-        <body>
-            <h1>Test text</h1>
-            <h2>More test</h2>
-            <div>Test, but is a div</div>
-        </body>
-    </head>
+<head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Mod2</title>
+<link rel ="stylesheet" href="myownstyle.css">
+
+
+
+</head>
+<body>
+<h1 class="main_title">
+  OUR MENU!
+</h1>
+
+<div class = "container">
+<div class="row">
+  <div class="col-lg-3 col-md-3"><p class = "title"><span id = "box"> Chicken </span><BR><span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed dignissim mauris quis faucibus auctor. Vivamus sed diam congue, rhoncus odio.
+
+  </span></div>
+  <div class="col-lg-3 col-md-3"><p class = "title"><span id = "box">Beef </span><BR><span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed dignissim mauris quis faucibus auctor. Vivamus sed diam congue, rhoncus odio.
+
+  </span></div>
+  <div class="col-lg-3 col-md-3"><p class = "title"><span id = "box">Sushi </span><BR><span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed dignissim mauris quis faucibus auctor. Vivamus sed diam congue, rhoncus odio.
+
+  </span></div>
+
+  
+  </div>
+</div>
+</body>
 </html>
